feature:统一配置到文件